fix: body x-overflow hidden 적용

--- a/alcolpedia/home/static/home_jiyoon.css
+++ b/alcolpedia/home/static/home_jiyoon.css
@@ -139,5 +139,5 @@ img{
 body{
     margin: 0;
     padding: 0;
-    
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
